// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`null-arguments-item.js [__babel_estree] format 1`] = `
"Unexpected token ','. (1:12)
> 1 | foor('a', , 'b');
    |            ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1
Cause: Unexpected token ','. (1:11)"
`;

exports[`null-arguments-item.js [acorn] format 1`] = `
"Unexpected token (1:11)
> 1 | foor('a', , 'b');
    |           ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1
Cause: Unexpected token (1:10)"
`;

exports[`null-arguments-item.js [babel] format 1`] = `
"Unexpected token ','. (1:12)
> 1 | foor('a', , 'b');
    |            ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1
Cause: Unexpected token ','. (1:11)"
`;

exports[`null-arguments-item.js [espree] format 1`] = `
"Unexpected token , (1:11)
> 1 | foor('a', , 'b');
    |           ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1
Cause: Unexpected token ,"
`;

exports[`null-arguments-item.js [meriyah] format 1`] = `
"Unexpected token: ',' (1:11)
> 1 | foor('a', , 'b');
    |           ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1
Cause: [1:10-1:11]: Unexpected token: ','"
`;

exports[`null-arguments-item.js [oxc] format 1`] = `
"Unexpected token (1:11)
> 1 | foor('a', , 'b');
    |           ^
  2 | foo('looooooooooooooooooooooooooooooooooooooooooooooong', , 'looooooooooooooooooooooooooooooooooooooooooooooong');
  3 | foo("a",
  4 |     //1"
`;
